# TIF_AI

./: .gitignore  BoxMaster_minimal.txt  BoxMaster_structured.txt  LICENSE  README.md  TEMP_result.txt  document_schema.py  generate_schema.py  pyproject.toml  requirements.txt  run.py  temp_output.txt  visualize_langgraph.py
Temp/: preview_embeddings.py  sqlalclamey_test.py
app/: config.py  main.py  models.py  user_db_config_loader.py
app/agent/: business_agent.py  chain.py  graph.py  nodes.py  prompt.py  state.py  tools.py
app/core/: database_manager.py  ddl_loader.py  keyword_mapper.py  query_executor.py  result_formatter.py  retriever.py  schema_extractor.py  schema_preprocessor.py  schema_selector.py  schema_tools.py  sql_generator.py  sql_validator.py
app/prompts/: error_handler.py  sql_generator.py  sql_planner.py
app/schema_pipeline/: __init__.py  builder.py  db_intro_parser.py  embedding_pipeline.py  introspector.py  minimal_text.py  models.py  orchestrator.py  pipeline.py  schema_documenting.py  structured_docs.py  writer.py
app/static/: chat.css  chat.html  chat.js
app/utils/: cache.py  logger.py  token_tracker.py
config/: database_config.json
config/schemas/: avamed_db.json  avamed_db.txt  medical_db_prod.json  medical_db_prod.txt
database_schemas/crm_db/db_intro/: crm_db.txt
db/: conversation_memory.py  database_manager.py  langchain_memory.py  model.py
doc/: API_REFERENCE.md  FLOW_DIAGRAM_AND_EXPLANATION.md  README_DETAILED.md
tests/: query_temp.py  test_agent_workflow.py  test_api.py  test_business_agent_date.py  test_embedding.py  test_schema_builder.py  test_schema_documenting.py  test_schema_tools.py  test_yaml-txet.py  token_count.py
