[project]
name = "mysql-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.121.1",
    "groq>=0.33.0",
    "ipython>=9.7.0",
    "langchain>=1.0.5",
    "langchain-community>=0.4.1",
    "langchain-core>=1.0.4",
    "langchain-groq>=1.0.0",
    "langgraph>=1.0.3",
    "matplotlib>=3.10.7",
    "networkx>=3.5",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.4",
    "pymysql>=1.1.2",
    "pyodbc>=5.3.0",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.44",
    "sqlparse>=0.5.3",
    "uvicorn[standard]>=0.38.0",
]
