[project]
name = "mysql-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.121.1",
    "groq>=0.33.0",
    "ipython>=9.7.0",
    "langchain>=1.0.5",
    "langchain-community>=0.4.1",
    "langchain-core>=1.0.4",
    "langchain-groq>=1.0.0",
    "langgraph>=1.0.3",
    "matplotlib>=3.10.7",
    "networkx>=3.5",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pydantic>=2.12.4",
    "pymysql>=1.1.2",
    "pyodbc>=5.3.0",
    "pyyaml>=6.0.2",
    "python-dotenv>=1.2.1",
    "pytest>=8.3.3",
    "sqlalchemy>=2.0.44",
    "sqlparse>=0.5.3",
    "uvicorn[standard]>=0.38.0",
    "vulture>=2.14",
    "langchain-google-genai>=3.0.3",
    "transformers>=4.57.1",
    "tiktoken>=0.12.0",
    "torch>=2.9.1",
    "langchain-huggingface>=1.0.1",
    "langchain-postgres>=0.0.16",
    "sentence-transformers>=5.1.2",
    "hf-xet>=1.2.0",
    "huggingface-hub[hf-xet]>=0.36.0",
    "einops>=0.8.1",
    "langchain-openai>=1.0.3",
    "langchain-deepseek>=1.0.1",
    "langchain-anthropic>=1.1.0",
    "langgraph-checkpoint[postgres]>=3.0.1",
    "langsmith>=0.4.45",
    "mysql-connector-python>=9.5.0",
    "psycopg2-binary>=2.9.11",
    "psycopg[binary,pool]>=3.2.12",
    "langgraph-checkpoint-postgres>=3.0.1",
]
